# fps-hub

./: README.md  fps_cli_args.toml  pyproject.toml
fps_hub/: cli.py  config.py  main.py  routes.py
